--- a/templates/object_list_base.html
+++ b/templates/object_list_base.html
@@ -34,4 +34,7 @@
       </div>
     </div>
   {% endblock modals %}
+  {% block offcanvas %}
+    <div class="offcanvas offcanvas-start" tabindex="-1" id="startOffcanvas">{# offcanvas-start target#}</div>
+  {% endblock offcanvas %}
 {% endblock content %}
