--- a/templates/partials/tooltray_toggle_icon.html
+++ b/templates/partials/tooltray_toggle_icon.html
@@ -3,5 +3,5 @@
    class="btn btn-sm"
    title="Toggle icons"
    onclick="toggleToolTrayIcons('tooltray-trigger', '.tooltray-container')">
-  <i class="bi bi-tools fw-bold text-danger"></i>
+  <i class="bi bi-tools fw-bold setting-text-colour"></i>
 </a>
