--- a/item/templates/item/item_list.html
+++ b/item/templates/item/item_list.html
@@ -1,4 +1,5 @@
 {% extends "object_list_base.html" %}
+{% load ui_tags %}
 {% block title %}
   Items
 {% endblock title %}
@@ -19,7 +20,7 @@
           <th class="d-none d-lg-table-cell">Manufacturer</th>
           <th class="d-none d-lg-table-cell">Supplier</th>
           <th class="d-none d-lg-table-cell">Description</th>
-          <th class="d-none d-lg-table-cell">{% include "partials/tooltray_toggle_icon.html" %}</th>
+          <th class="d-none d-lg-table-cell">{% toggle_icon 'tooltray-trigger' 'tooltray-container' %}</th>
         </tr>
       </thead>
       <tbody>
