--- a/location/templates/location/location_list.html
+++ b/location/templates/location/location_list.html
@@ -1,4 +1,5 @@
 {% extends "object_list_base.html" %}
+{% load ui_tags %}
 {% block title %}
   Locations
 {% endblock title %}
@@ -17,7 +18,7 @@
           <th width="15%" class="d-none d-lg-table-cell">Room</th>
           <th width="20%" class="d-none d-lg-table-cell">Description</th>
           <th class="d-none d-lg-table-cell">Stock Items</th>
-          <th class="d-none d-lg-table-cell">{% include "partials/tooltray_toggle_icon.html" %}</th>
+          <th class="d-none d-lg-table-cell">{% toggle_icon 'tooltray-trigger' 'tooltray-container' %}</th>
         </tr>
       </thead>
       <tbody>
