--- a/templates/base.html
+++ b/templates/base.html
@@ -91,6 +91,10 @@
       {% endblock footer %}
     </footer>
     {% block offcanvas %}
+      <div class="offcanvas offcanvas-top" tabindex="-1" id="topOffcanvas">{# offcanvas-top target#}</div>
+      <div class="offcanvas offcanvas-bottom" tabindex="-1" id="bottomOffcanvas">{# offcanvas-bottom target#}</div>
+      <div class="offcanvas offcanvas-start" tabindex="-1" id="startOffcanvas">{# offcanvas-start target#}</div>
+      <div class="offcanvas offcanvas-end" tabindex="-1" id="endOffcanvas">{# offcanvas-end target#}</div>
     {% endblock offcanvas %}
     {% block modals %}
     {% endblock modals %}
