--- a/item/templates/inhouse/partials/component_form.html
+++ b/item/templates/inhouse/partials/component_form.html
@@ -8,7 +8,9 @@
 <div class="offcanvas-body">
   <form action="{% url 'component_create' reagent.pk %}" method="post">
     {% csrf_token %}
-    <div id="stock-input" class="type-search-input">{% include "inhouse/partials/stock_search_input_offcanvas.html" %}</div>
+    <div id="stock-input" class="type-search-input">
+      {% include "inhouse/partials/stock_search_input_offcanvas.html" %}
+    </div>
     <div class="input-group mb-3">
       <span class="input-group-text input-group-text">{{ form.quantity.label_tag }}</span>
       {{ form.quantity }}
@@ -17,6 +19,7 @@
       <span class="input-group-text input-group-text">{{ form.quantity_unit.label_tag }}</span>
       {{ form.quantity_unit }}
     </div>
+    <div class="small">NB: Only <b>validated</b> stocks are shown.</div>
     <button type="submit" class="btn btn-success float-end">Add</button>
-  </form>
+  </form> 
 </div>
