--- a/templates/base.html
+++ b/templates/base.html
@@ -7,13 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="ReagenTree - Reagent Inventory System" />
     <meta name="author" content="Mian Chen" />
-    <meta name="keywords"
-          content="ReagenTree, reagent, quality, inventory, management, system" />
-    <title>
-      ReagenTree |
-      {% block title %}
-      {% endblock title %}
-    </title>
+    <meta name="keywords" content="ReagenTree, reagent, quality, inventory, management, system" />
+    <title>ReagenTree | {% block title %} {% endblock title %}</title>
     <link rel="icon"
           href="{% static 'images/favicon.ico' %}"
           type="image/x-icon">
@@ -98,18 +93,18 @@
     {% endblock offcanvas %}
     {% block modals %}
     {% endblock modals %}
-    <form id="logout-form"
-          action="{% url 'logout' %}"
-          method="post"
-          style="display: none">
+    <form id="logout-form" action="{% url 'logout' %}" method="post" class="d-none"> {# hidden logout form #}
       {% csrf_token %}
     </form>
     <!-- Add your JavaScript files here -->
     <script src="{% static 'js/bootstrap-5.3.2-bundle.min.js' %}"></script>
     <script src="{% static 'js/htmx-1.9.8.min.js' %}"></script>
     <script src="{% static 'js/reagentree-1.0.js' %}"></script>
-    <script>AlertsAutoDismissal("auto-dismiss", 2000);</script>
+    <script>
+      AlertsAutoDismissal("auto-dismiss", 2000); // auto dismiss alerts after 2 seconds
+      setInterval(checkSessionStatus, 1000 * 60 * 15); // check session status every 15 minutes
+    </script>
     {% block js %}
     {% endblock js %}
-  </body>
-</html>
+    </body>
+  </html>
