--- a/user/templates/user/auth_base.html
+++ b/user/templates/user/auth_base.html
@@ -1,42 +1,73 @@
-{% extends 'base.html' %}
+<!-- base template for the authentication site -->
 {% load static %}
-{% block header %}
-{% endblock header %}
-{% block title %}
-{% endblock title %}
-{% block css %}
-  <style>
-  body { background-image: url('{% static "images/lab_background.jpg" %}'); background-size: cover; background-repeat: no-repeat; }
-  </style>
-{% endblock css %}
-{% block content %}
-  <div class="d-flex justify-content-center">
-    <div class="{% block auth_size %}{% endblock auth_size %}">
-      <div class="card">
-        <div class="card-header d-flex justify-content-between align-items-center">
-          <img src="{% static 'images/ReagenTree_Logo.png' %}"
-               width="40"
-               height="40"
-               alt="ReagenTree Logo"
-               title="ReagenTree" />
-          <h4 class="mb-0">ReagenTree</h4>
-        </div>
-        <div class="card-body my-5 mx-3">
-          <form method="post">
-            {% csrf_token %}
-            {% block auth_form %}
-            {% endblock auth_form %}
-            <div class="d-grid">
-              <button type="submit" class="btn btn-success">
-                {% block auth_button %}
-                {% endblock auth_button %}
-              </button>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="ReagenTree - Reagent Inventory System" />
+    <meta name="author" content="Mian Chen" />
+    <meta name="keywords"
+          content="ReagenTree, reagent, quality, inventory, management, system" />
+    <title>
+      ReagenTree |
+      {% block title %}
+      {% endblock title %}
+    </title>
+    <link rel="icon"
+          href="{% static 'images/favicon.ico' %}"
+          type="image/x-icon">
+    <link rel="shortcut icon"
+          href="{% static 'images/favicon.ico' %}"
+          type="image/x-icon">
+    <!-- Add your CSS files here -->
+    <link rel="stylesheet" href="{% static 'css/bootstrap-5.3.2.min.css' %}" />
+    <link rel="stylesheet"
+          href="{% static 'icons/bootstrap-icons-1.11.1.min.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/reagentree-1.0.css' %}" />
+    <style>main#main-content {padding-top: 75px;} /* top padding under the fixed navbar */</style>
+    {% block css %}
+      <style>
+      body { background-image: url('{% static "images/lab_background.jpg" %}'); background-size: cover; background-repeat: no-repeat; }
+      </style>
+    {% endblock css %}
+  </head>
+  <body>
+    <main id="main-content" class="mx-2">
+      <!-- Main content goes here -->
+      {% block content %}
+        <div class="d-flex justify-content-center">
+          <div class="{% block auth_size %}{% endblock auth_size %}">
+            <div class="card">
+              <div class="card-header d-flex justify-content-between align-items-center">
+                <img src="{% static 'images/ReagenTree_Logo.png' %}"
+                     width="40"
+                     height="40"
+                     alt="ReagenTree Logo"
+                     title="ReagenTree" />
+                <h4 class="mb-0">ReagenTree</h4>
+              </div>
+              <div class="card-body my-5 mx-3">
+                <form method="post">
+                  {% csrf_token %}
+                  {% block auth_form %}
+                  {% endblock auth_form %}
+                  <div class="d-grid">
+                    <button type="submit" class="btn btn-success">
+                      {% block auth_button %}
+                      {% endblock auth_button %}
+                    </button>
+                  </div>
+                </form>
+              </div>
             </div>
-          </form>
+            {% block auth_footer %}
+            {% endblock auth_footer %}
+          </div>
         </div>
-      </div>
-      {% block auth_footer %}
-      {% endblock auth_footer %}
-    </div>
-  </div>
-{% endblock content %}
+      {% endblock content %}
+    </main>
+    <!-- Add your JavaScript files here -->
+    <script src="{% static 'js/bootstrap-5.3.2-bundle.min.js' %}"></script>
+  </body>
+</html>
