invalidate stock when reagentcomponent changes

--- a/item/templates/inhouse/inhouse_detail.html
+++ b/item/templates/inhouse/inhouse_detail.html
@@ -52,10 +52,10 @@
         <span class="fw-bold"><i class="bi bi-menu-button-wide-fill text-danger"></i> Reagent Components</span>
         <span>
           <a data-bs-toggle="offcanvas"
-             href="#startOffcanvas"
+             href="#endOffcanvas"
              title="Add components"
              hx-get="{% url 'component_create' object.pk %}"
-             hx-target="#startOffcanvas"
+             hx-target="#endOffcanvas"
              hx-swap="innerHTML"
              class="btn btn-sm btn-success">
             <i class="bi bi-plus-circle"></i>
